change main content container

--- a/client/src/components/layout/index.scss
+++ b/client/src/components/layout/index.scss
@@ -9,4 +9,10 @@
     position: fixed;
     bottom: 0;
   }
+
+  .main-content {
+    width: 95%;
+    max-width: 1000px;
+    margin: 0 auto;
+  }
 }
